<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6BCBC"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/passwordTextBox"
        android:layout_width="320dp"
        android:layout_height="75dp"
        android:background="#E1DDDD"
        android:hint="@string/x1j4w_tlp9"
        android:includeFontPadding="true"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:textIsSelectable="true"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <Switch
        android:id="@+id/hidePasswordSwitch"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:checked="false"
        android:showText="false"
        android:text="@string/hide_password"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextBox"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/upperCaseSwitch"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:checked="true"
        android:text="@string/uppercase_e_g_abc"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hidePasswordSwitch"
        app:layout_constraintVertical_bias="0.025" />

    <Switch
        android:id="@+id/lowerCaseSwitch"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:checked="true"
        android:text="@string/lowercase_e_g_abc"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upperCaseSwitch"
        app:layout_constraintVertical_bias="0.038" />

    <Switch
        android:id="@+id/digitsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:checked="true"
        android:text="@string/digits_e_g_123"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowerCaseSwitch"
        app:layout_constraintVertical_bias="0.044" />

    <Switch
        android:id="@+id/symbolsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:checked="true"
        android:text="@string/symbols_e_g"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/digitsSwitch"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/passwordLengthTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/password_length_1_12"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#616161"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/generateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/digitsSwitch"
        app:layout_constraintVertical_bias="0.703" />

    <Button
        android:id="@+id/setButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/set"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/generateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/passwordLengthTextBox"
        app:layout_constraintTop_toBottomOf="@+id/digitsSwitch"
        app:layout_constraintVertical_bias="0.71"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/generateButton"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/generate"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hidePasswordSwitch"
        app:layout_constraintVertical_bias="0.871" />

    <Button
        android:id="@+id/button"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@android:string/copy"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/passwordTextBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>